--- a/cssframework/home.css
+++ b/cssframework/home.css
@@ -29,7 +29,7 @@ html,body{
     }
     .banner {
         position: relative;
-        background: url('/groupimg1/flower4.jpg') no-repeat center;
+        background: url('/groupimg1/nature2.jpg') no-repeat center;
         background-size: cover;
         height: 80%;
         width: 100%;
